Fixing fe toolbar dropdown item spacing on narrow viewport

--- a/admin/assets/less/admin-frontend-custom.less
+++ b/admin/assets/less/admin-frontend-custom.less
@@ -335,13 +335,13 @@
 			    text-overflow: ellipsis!important;
 			    white-space: nowrap;
 			}
-			 > li a{
+			 > li > a{
 				padding: 0 6px !important;
 			}
 		}
 		#frontEndTools > ul#tools-version{
 			margin-left: 0 !important;
-			 > li a{
+			 > li > a{
 				padding: 0 7px !important;
 			}
 		}
